# uniovi-simur-wearablepermed-utils

./: README.md  setup.cfg
src/wearablepermed_utils/: aggregate_windows_features.py  csv_to_segmented_activity_desync.py  segmented_activity_to_stack.py
src/wearablepermed_utils/core/: _segmentation.py
